# tp-project4

./: CMakeLists.txt  button.h  elevator.h  main.cpp  tp4.sln
src/: button.cpp  button.h  elevator.cpp  elevator.h  floor.cpp  floor.h  main.cpp  person.cpp  person.h
tp4/: tp4.vcxproj
